<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Searchbar3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b6"
    tools:context=".order">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="274dp"
        android:layout_height="52dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:background="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/Profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Buger_infor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:srcCompat="@drawable/bu1" />

    <Button
        android:id="@+id/Qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="327dp"
        android:text="@string/Qty"
        android:textColor="@color/Yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Qut_num"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Buger_infor" />

    <Button
        android:id="@+id/Plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="323dp"
        android:text="@string/Plus"
        android:textColor="@color/Yellow"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Qut_num"
        app:layout_constraintTop_toBottomOf="@+id/Buger_infor" />

    <Button
        android:id="@+id/Qut_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="323dp"
        android:text="@string/Qut_num"
        android:textColor="@color/Yellow"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Qty"
        app:layout_constraintTop_toBottomOf="@+id/Buger_infor" />

    <ImageView
        android:id="@+id/Profile"
        android:layout_width="81dp"
        android:layout_height="76dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/i28" />

    <Button
        android:id="@+id/Pay"
        android:layout_width="177dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Lightblue"
        android:text="@string/Pay"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Qut_num"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/Back1"
        android:layout_width="177dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/Back1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pay"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>