<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/litepurple"
    tools:context=".page4">

    <Button
        android:id="@+id/Skip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="242dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/litepurple"
        android:text="@string/Skip1"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/back3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back3"
        android:layout_width="35dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="242dp"
        app:layout_constraintEnd_toStartOf="@+id/Skip2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageView
        android:id="@+id/Onboard_p2"
        android:layout_width="239dp"
        android:layout_height="269dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Onboard_w3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Skip2"
        app:srcCompat="@drawable/i10" />

    <TextView
        android:id="@+id/Onboard_w3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="45dp"
        android:text="@string/Onboard_w3"
        android:textColor="@color/purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Onboard_w4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Onboard_p2" />

    <TextView
        android:id="@+id/Onboard_w4"
        android:layout_width="324dp"
        android:layout_height="55dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="44dp"
        android:text="@string/Onboard_w4"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Onboard_w3" />

    <Button
        android:id="@+id/Onborad_next2"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="@color/purple"
        android:text="@string/Onborad_next1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Onboard_w4" />
</androidx.constraintlayout.widget.ConstraintLayout>