<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b6"
    tools:context=".page2">

    <Button
        android:id="@+id/Start"
        android:layout_width="341dp"
        android:layout_height="70dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/lightpurple"
        android:text="@string/Start"
        android:textColor="@color/purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Main_word2"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/App_theam"
        android:layout_width="258dp"
        android:layout_height="78dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="32dp"
        android:text="@string/App_theam"
        android:textColor="@color/purple"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <ImageView
        android:id="@+id/main_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="158dp"
        app:layout_constraintBottom_toTopOf="@+id/Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/App_theam"
        app:srcCompat="@drawable/i5" />

    <TextView
        android:id="@+id/Main_word"
        android:layout_width="175dp"
        android:layout_height="94dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="9dp"
        android:text="@string/Main_word"
        android:textColor="@color/purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Main_word2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_i" />

    <TextView
        android:id="@+id/Main_word2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Main_word2"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Main_word" />

</androidx.constraintlayout.widget.ConstraintLayout>